--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@nestjs/mongoose": "^10.0.1",
     "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.1.3",
+    "@nestjs/websockets": "^10.1.3",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
