--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-socket.io": "^10.1.3",
+    "@nestjs/serve-static": "^4.0.0",
     "@nestjs/websockets": "^10.1.3",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
